Replace StandardCharsets.UTF-8 with UTF-8 for compatability
Signed-off-by: James Clarke <jjjclarke@yahoo.com>